--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,10 @@
 			"Generosity\\": "app"
 		},
 		"files": [
+			"app/Site/functions-site.php",
 			"app/framework.php",
-			"app/functions-extras.php"
+			"app/functions-extras.php",
+			"app/functions-scripts.php"
 		]
 	},
 	"require": {
