let's commit everything else

--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,6 @@
 		"benlumia007/backdrop-template-hierarchy": "^1.0",
 		"benlumia007/backdrop-template-manager": "^1.0",
 		"benlumia007/backdrop-template-view": "^1.0",
-		"benlumia007/backdrop-theme": "^1.0"
+		"benlumia007/backdrop-theme": "v1.0.0.x-dev"
 	}
 }
